--- a/patterns/logstash_condition.conf
+++ b/patterns/logstash_condition.conf
@@ -18,6 +18,6 @@ filter {
 output {
   elasticsearch {
     hosts => ["http://localhost:9200"]
-    index => "%{[@metadata][beat]}-%{[@metadata][version]}"
+    index => "%{[fields][component]}"
   }
 }
