--- a/examples/grock_example.yml
+++ b/examples/grock_example.yml
@@ -23,6 +23,9 @@ http://34.201.205.171/        --->     %{URI}
 "-"                           --->     %{QUOTEDSTRING}
 
 
+[9091]                        --->      \[%{NUMBER:PID}\]
+
+
 "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/94.0.4606.71 Safari/537.36 Edg/94.0.992.38"    ---> %{SPACE}%{QUOTEDSTRING}
 
 
